@@ -1,4 +1,12 @@
+2000-08-10  Federico Mena Quintero  <federico@helixcode.com>
+
+	* cal-client/cal-client.c (cal_client_generate_instances): There.
+	A pretty function to generate recurrence instances atomically so
+	that clients don't have to jump through hoops.  Now we can get rid
+	of the ugly calendar_iterate() function.
+
 2000-08-09  Cody Russell  <bratsche@gnome.org>
+
 	* gui/calendar-commands.c: Make the toolbar honor the user's
 	gnomecc settings for detachable toolbars.
 
